[tool.poetry]
name = "pdf-to-image-web-converter"
version = "0.1.0"
description = ""
authors = ["Sven Grunewaldt <strayer@olle-orks.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Wand = "^0.6.5"
Flask = "^2.2.2"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
bandit = "^1.7.0"
pylint = "^2.6.0"
livereload = "2.6.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
